--- a/app/src/main/res/layout/activity_add_contacts.xml
+++ b/app/src/main/res/layout/activity_add_contacts.xml
@@ -49,7 +49,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnAddOK"
+        android:text="@string/btnAddOk"
         android:id="@+id/btnAddOk" />
 
     <Button
