--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,9 @@
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_weight="1.18" />
+        android:layout_weight="1.18"
+        android:clickable="true"
+        android:choiceMode="singleChoice" />
 
     <Button
         android:layout_width="wrap_content"
