--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,22 +11,31 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="350dp"
-        android:id="@+id/listViewContacts"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_weight="1.18"
-        android:clickable="true"
-        android:choiceMode="singleChoice" />
-
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btnAdd"
-        android:id="@+id/btnAdd" />
+        android:layout_weight="0.8">
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/listViewContacts"
+            android:clickable="true"
+            android:choiceMode="singleChoice" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.2">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btnAdd"
+            android:id="@+id/btnAdd" />
+    </LinearLayout>
+
+
 
 
 </LinearLayout>
